# aoc-2022

rust/: Cargo.toml
rust/src/: calories.rs  camp.rs  crates.rs  crt.rs  encrypted.rs  files.rs  game.rs  heights.rs  io.rs  lava.rs  main.rs  map.rs  monkey.rs  packet.pest  packets.rs  packing.rs  planting.rs  pressure.rs  riddle.rs  robot.rs  rope.rs  sand.rs  sensors.rs  signal.rs  tetris.rs  trees.rs
