[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Robert Goss <goss.robert@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5" 
num = "0.4.0"
pest = "2.5.1"
pest_derive = "2.5.1"
petgraph = "0.6.2"
num-rational = "0.4.1"